# wise-tech-task

./: .gitignore  CMakeLists.txt  README.md
resources/: debug_phase_task.txt  phase_task.txt
src/: CMakeLists.txt  main.cpp
src/les/: CMakeLists.txt  les.cpp  les.h
src/satellite/: CMakeLists.txt  satellite.cpp  satellite.h  satellite_data.cpp  satellite_data.h
src/satellite/satellite_parse_exception/: CMakeLists.txt  satellite_parse_exception.cpp  satellite_parse_exception.h
